force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/Sansan_CI__ContactAdditionalInfo__c.object-meta.xml
<CustomObject>
    <label>取引先責任者追加情報</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>ContactAdditionalInfo名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>