force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__CI_LocationTransfeProcessingNum__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_LocationTransfeProcessingNum__c</fullName>
    <label>拠点移動_処理回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>