force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__CI_LocationTransferErrMsg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_LocationTransferErrMsg__c</fullName>
    <label>拠点移動エラーメッセージ</label>
    <type>TextArea</type>
</CustomField>