force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__CI_LocationTransferFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_LocationTransferFlg__c</fullName>
    <formula>(ISNULL(Sansan_CI__CI_LocationTransferNextProcessingDate__c) || Sansan_CI__CI_LocationTransferNextProcessingDate__c &lt; NOW()) &amp;&amp; Sansan_CI__CI_SLC_Difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>拠点移動_処理対象</label>
    <type>Checkbox</type>
</CustomField>