force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__CI_LocationTransferNextProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_LocationTransferNextProcessingDate__c</fullName>
    <label>拠点移動_次回処理日時</label>
    <type>DateTime</type>
</CustomField>