force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__CI_SLC_Difference__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_SLC_Difference__c</fullName>
    <formula>!ISBLANK(Sansan_CI__Contact__r.Sansan_CI__CI_SLC__c ) &amp;&amp; Sansan_CI__Contact__r.Sansan_CI__CI_SLC__c &lt;&gt; Sansan_CI__Contact__r.Account.Sansan_CI__CI_SLC__c</formula>
    <label>SLC差異フラグ</label>
    <type>Checkbox</type>
</CustomField>