force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__Contact__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>取引先責任者追加情報</relationshipLabel>
    <relationshipName>ContactAdditionalnfo</relationshipName>
    <type>Lookup</type>
</CustomField>