force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__LocationTransferPreAccountId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LocationTransferPreAccountId__c</fullName>
    <label>拠点移動前取引先ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>