force-app/main/default/objects/Sansan_CI__ContactAdditionalInfo__c/fields/Sansan_CI__LocationTransferredDate__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LocationTransferredDate__c</fullName>
    <label>拠点移動日時</label>
    <type>DateTime</type>
</CustomField>